change getFirst